--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           <li><a class="nav-link scrollto" href="#services">PHẢ ĐỒ</a></li>
           <li class="dropdown"><a href="#pricing"><span>PHẢ HỆ</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Đang cập nhật</a></li>
+              <li><a href="portfolio-details.html">Đang cập nhật</a></li>
               <li class="dropdown"><a href="#"><span>Đang cập nhật</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Đang cập nhật</a></li>
+                  <li><a href="inner-page.html">Đang cập nhật</a></li>
                   <li><a href="#">Đang cập nhật</a></li>
                   <li><a href="#">Đang cập nhật</a></li>
                   <li><a href="#">Đang cập nhật</a></li>
