Tuổi thơ giữ dội

--- a/index.html
+++ b/index.html
@@ -1029,27 +1029,27 @@
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/nhatho-toco/dang-nhang.png" data-gallery="portfolioGallery"
               class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
-                src="assets/img/Clients/Nha-Tho-To-Co.png" class="img-fluid" alt="">
+                src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/ong-ngu/xum-vay-tet.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Tết Xum Vầy"> <img src="assets/img/Clients/Tet-la-Tet.png"
-                class="img-fluid" alt="">
+              class="portfolio-lightboxs preview-link" title="Tết Xum Vầy"> <img
+                src="assets/img/Clients/Tet-la-Tet1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/sinh-nhat-Misa.png" data-gallery="portfolioGallery"
               class="portfolio-lightboxs preview-link" title="Sinh nhật đầu tiên của Mysa-cute"> <img
-                src="assets/img/Clients/sinh-nha-Mysa.png" class="img-fluid" alt="">
+                src="assets/img/Clients/sinh-nha-Mysa1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/Misa.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Mysa Cute"> <img src="assets/img/Clients/Mysa-cute.png"
+              class="portfolio-lightboxs preview-link" title="Mysa Cute"> <img src="assets/img/Clients/Mysa-cute1.png"
                 class="img-fluid" alt="">
             </a>
           </div>
@@ -1057,14 +1057,14 @@
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/anh-quang/di-dai-dien.png" data-gallery="portfolioGallery"
               class="portfolio-lightboxs preview-link" title="Đi Đại Diện Đám Cưới Anh Tuấn"> <img
-                src="assets/img/clients/di-dai-dien.png" class="img-fluid" alt="">
+                src="assets/img/clients/di-dai-dien1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/anh-trinh/dam-cuoi-chuọt.jpg" data-gallery="portfolioGallery"
               class="portfolio-lightboxs preview-link" title="Tết và sự xum họp!"> <img
-                src="assets/img/clients/gd-a-trinh.png" class="img-fluid" alt="">
+                src="assets/img/clients/gd-a-trinh1.png" class="img-fluid" alt="">
             </a>
           </div>
 
@@ -1077,14 +1077,14 @@
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/nhatho-toco/Nha-tho-To-co.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/Mysa-bai-to.png"
+              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/Mysa-bai-to1.png"
                 class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/anh-trinh/trung-nien-no.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/trung-nien.png"
+              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/trung-nien1.png"
                 class="img-fluid" alt="">
             </a>
           </div>
@@ -1092,20 +1092,20 @@
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/tam-biet-tho-trang.png" data-gallery="portfolioGallery"
               class="portfolio-lightboxs preview-link" title="App 2"> <img
-                src="assets/img/Clients/Tam-biet-tho-trang.png" class="img-fluid" alt="">
+                src="assets/img/Clients/Tam-biet-tho-trang1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/ong-ngu/123.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/Tuoi-tho-giu-doi.png"
-                class="img-fluid" alt="">
+              class="portfolio-lightboxs preview-link" title="App 2"> <img
+                src="assets/img/Clients/Tuoi-tho-giu-doi1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/ra-thudo-giai-ngo.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/clients/Di-giai-ngo.png"
+              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/clients/Di-giai-ngo1.png"
                 class="img-fluid" alt="">
             </a>
           </div>
@@ -1128,20 +1128,20 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">
-                <p>All</p> <img src="assets/img/clients/Mysa-bai-to.png" class="img-fluid" alt="">
+                <p>All</p> <img src="assets/img/clients/Mysa-bai-to1.png" class="img-fluid" alt="">
               </li>
               <li data-filter=".filter-card">
-                <p>TỪ ĐƯỜNG</p> <img src="assets/img/clients/Nha-Tho-To-Co.png" class="img-fluid" alt="">
+                <p>TỪ ĐƯỜNG</p> <img src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid" alt="">
               </li>
               <li data-filter=".filter-app">
-                <p>CỤ NGHỊ</p> <img src="assets/img/clients/Lang-mo.png" class="img-fluid" alt="">
+                <p>CỤ NGHỊ</p> <img src="assets/img/clients/Lang-mo1.png" class="img-fluid" alt="">
               </li>
               <li data-filter=".filter-web">
-                <p>NHÁNH ÔNG LÝ</p> <img src="assets/img/clients/Tet-la-Tet.png" class="img-fluid" alt="">
+                <p>NHÁNH ÔNG LÝ</p> <img src="assets/img/clients/Tet-la-Tet1.png" class="img-fluid" alt="">
               </li>
 
               <li data-filter=".filter-ok">
-                <p>NHÁNH ÔNG CỬU</p> <img src="assets/img/clients/Tuoi-tho-giu-doi.png" class="img-fluid" alt="">
+                <p>NHÁNH ÔNG CỬU</p> <img src="assets/img/clients/Tuoi-tho-giu-doi1.png" class="img-fluid" alt="">
               </li>
             </ul>
           </div>
