--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,28 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="assets/img/Gia-Dinh/nhatho-toco/dang-nhang.png" data-gallery="portfolioGallery"
+              class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
+                src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid" alt="">
+            </a>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="assets/img/Gia-Dinh/nhatho-toco/dang-nhang.png" data-gallery="portfolioGallery"
+              class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
+                src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid" alt="">
+            </a>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="assets/img/Gia-Dinh/nhatho-toco/dang-nhang.png" data-gallery="portfolioGallery"
+              class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
+                src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid" alt="">
+            </a>
+          </div>
+
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/ong-ngu/xum-vay-tet.png" data-gallery="portfolioGallery"
               class="portfolio-lightboxs preview-link" title="Tết Xum Vầy"> <img
                 src="assets/img/Clients/Tet-la-Tet1.png" class="img-fluid" alt="">
