Tạm biết thỏ trắng!

--- a/index.html
+++ b/index.html
@@ -1035,25 +1035,24 @@
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/ong-ngu/Tet-tet-tet.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
+              class="portfolio-lightboxs preview-link" title=" Một đàn cháu con Xum vầy tết"> <img
                 src="assets/img/clients/Tet-la-Tet1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/sinh-nhat-Misa.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
+              class="portfolio-lightboxs preview-link" title="Sinh nhật đầu tiên của MySa"> <img
                 src="assets/img/clients/sinh-nha-Mysa1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/Misa.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Dâng hương tại nhà thờ Bà Tổ Cô - Văn Cú Nam Định!"> <img
-                src="assets/img/clients/Mysa-cute1.png" class="img-fluid" alt="">
+              class="portfolio-lightboxs preview-link" title="Mysa Cute"> <img src="assets/img/clients/Mysa-cute1.png"
+                class="img-fluid" alt="">
             </a>
           </div>
-
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/anh-quang/di-dai-dien.png" data-gallery="portfolioGallery"
@@ -1077,30 +1076,30 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <a href="assets/img/Gia-Dinh/nhatho-toco/Nha-tho-To-co.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/Mysa-bai-to1.png"
-                class="img-fluid" alt="">
-            </a>
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <a href="assets/img/Gia-Dinh/anh-trinh/trung-nien-no.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/Clients/trung-nien1.png"
-                class="img-fluid" alt="">
+            <a href="assets/img/Gia-Dinh/ong-ngu/123.png" data-gallery="portfolioGallery"
+              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+                src="assets/img/clients/Tuoi-tho-giu-doi1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/tam-biet-tho-trang.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img
-                src="assets/img/Clients/Tam-biet-tho-trang1.png" class="img-fluid" alt="">
+              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+                src="assets/img/clients/Tam-biet-tho-trang1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <a href="assets/img/Gia-Dinh/ong-ngu/123.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img
-                src="assets/img/Clients/Tuoi-tho-giu-doi1.png" class="img-fluid" alt="">
+            <a href="assets/img/Gia-Dinh/anh-trinh/trung-nien-no.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+                src="assets/img/clients/trung-nien1.png" class="img-fluid" alt="">
+            </a>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="assets/img/Gia-Dinh/nhatho-toco/Nha-tho-To-co.png" data-gallery="portfolioGallery"
+              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+                src="assets/img/clients/Mysa-bai-to1.png" class="img-fluid" alt="">
             </a>
           </div>
 
@@ -1110,6 +1109,7 @@
                 class="img-fluid" alt="">
             </a>
           </div>
+
         </div>
       </div>
     </section><!-- End Clients Section -->
