--- a/index.html
+++ b/index.html
@@ -620,10 +620,10 @@
             <div class="featured-carousel owl-carousel">
 
               <div class="item">
-                <div class="work-wrap d-md-flex">
-                  <div class="col-6 col-xs-12 textalign-center">
+                <div class="work-wrap d-md-flex" style="background: #fff3f171;">
+                  <div class="p-left20 col-6 col-xs-12 textalign-center">
                     <div class="img order-md-last"
-                      style="background-image: url(./assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do.jpg);"></div>
+                      style="background-image: url(./assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do-rem.png);"></div>
                   </div>
 
                   <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
@@ -659,8 +659,8 @@
           </div>
 
           <div class="item">
-            <div class="work-wrap d-md-flex">
-              <div class="col-6 col-xs-12 textalign-center">
+            <div class="work-wrap d-md-flex" style="background: rgba(235, 232, 200, 0.329); ">
+              <div class="p-left20 col-6 col-xs-12 textalign-center">
                 <div class="img order-md-last" style="background-image: url(./assets/images/work-2.jpg);"></div>
               </div>
 
@@ -696,10 +696,9 @@
       </div>
 
       <div class="item">
-        <div class="work-wrap d-md-flex">
-          <div class="col-6 col-xs-12 textalign-center">
-            <div class="img order-md-last"
-              style="background-image: url(./assets/img/Gia-Dinh/nhatho-toco/dang-nhang.png);">
+        <div class="work-wrap d-md-flex" style="background-color: rgba(223, 175, 241, 0.164);">
+          <div class="p-left20 col-6 col-xs-12 textalign-center">
+            <div class="img order-md-last" style="background-image: url(./assets/images/imagmovebg.png);">
             </div>
           </div>
           <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
@@ -733,10 +732,10 @@
       </div>
 
       <div class="item">
-        <div class="work-wrap d-md-flex">
-          <div class="col-6 col-xs-12 textalign-center">
+        <div class="work-wrap d-md-flex" style="background-color: rgba(241, 205, 150, 0.171);">
+          <div class="p-left20 col-6 col-xs-12 textalign-center">
             <div class="img order-md-last"
-              style="background-image: url(./assets/img/Gia-Dinh/ong-ngu/mot-dan-con-chau.jpg);"></div>
+              style="background-image: url(./assets/img/Gia-Dinh/ong-ngu/mot-dan-con-chau-remove.png);"></div>
           </div>
           <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
             <div class="text text-right text-lg-right p-4 d-flex align-items-center">
@@ -769,10 +768,9 @@
       </div>
 
       <div class="item">
-        <div class="work-wrap d-md-flex">
-          <div class="col-6 col-xs-12 textalign-center">
-            <div class="img order-md-last"
-              style="background-image: url(./assets/img/Gia-Dinh/anh-quang/di-dai-dien.png);">
+        <div class="work-wrap d-md-flex" style="background-color: rgba(101, 236, 189, 0.123);">
+          <div class="p-left20 col-6 col-xs-12 textalign-center">
+            <div class="img order-md-last" style="background-image: url(./assets/images/Pha-ký-removebg-convert.png);">
             </div>
           </div>
           <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
@@ -807,10 +805,10 @@
       </div>
 
       <div class="item">
-        <div class="work-wrap d-md-flex">
-          <div class="col-6 col-xs-12 textalign-center">
+        <div class="work-wrap d-md-flex" style="background-color: rgba(181, 189, 226, 0.219);">
+          <div class="p-left20 col-6 col-xs-12 textalign-center">
             <div class="img order-md-last"
-              style="background-image: url(./assets/img/Gia-Dinh/anh-trinh/gia-danh-anh-trinh.jpg);"></div>
+              style="background-image: url(./assets/img/Gia-Dinh/anh-trinh/dam-cuoi-ch.png);"></div>
           </div>
           <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
             <div class="text text-right text-lg-right p-4 d-flex align-items-center">
@@ -843,18 +841,18 @@
       </div>
 
       <div class="item">
-        <div class="work-wrap d-md-flex">
-          <div class="col-6 col-xs-12 textalign-center">
+        <div class="work-wrap d-md-flex" style="background-color: #3a08081f;">
+          <div class="p-left20 col-6 col-xs-12 textalign-center">
             <div class="img order-md-last" style="background-image: url(./assets/images/lang_Logo.jpg);"></div>
           </div>
           <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
             <div class="text text-right text-lg-right p-4 d-flex align-items-center">
               <div class="btn-gt">
                 <h2>
-                  <font color="#aca9a9" font-size="8px">Lăng Mộ</font>
+                  <font color=" rgb(238, 234, 194);" font-size="8px">Lăng Mộ</font>
                 </h2>
                 <h3 class="mb-4"> Họ Nguyễn <span>CỤ NGHỊ</span></h3>
-                <font color="#aca9a9">
+                <font color=" rgb(238, 234, 194);">
                   <p class="h5">Nơi lưu giữ mộ phần</p>
                   <p class="h5 mb-4">Anh em, con cháu trong Họ có thể tìm hiểu địa chỉ lưu giữ mộ phần, ngày kỵ
                     huý của các bậc Tiền Nhân, người đã khuất trong gia đình hoặc anh em thân thích.</p>
@@ -935,9 +933,6 @@
       </div>
     </section><!-- End Counts Section -->
 
-
-
-
     <section id="thuvienanh" class="about">
       <div class="container" data-aos="fade-up">
 
@@ -979,7 +974,7 @@
               </a>
 
               <a href="#a">
-                <img src="./assets/img/Gia-Dinh/anh-quang/TuanLuyen.jpg" alt="" />GĐ Tuấn Luyến
+                <img src="./assets/img/Gia-Dinh/anh-quang/TuanLuyen-remov.png" alt="" />GĐ Tuấn Luyến
               </a>
 
               <a href="#a">
@@ -1217,7 +1212,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ok">
-            <img src="assets/img/Gia-Dinh/ong-ngu/Untitled.png" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/ong-ngu/123.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -1239,7 +1234,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/Gia-Dinh/anh-quang/TuanLuyen.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/anh-quang/TuanLuyen-remov.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 2</h4>
               <p>Card</p>
@@ -1272,7 +1267,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/Gia-Dinh/hoa-hiep/HoaDaiNhan.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/hoa-hiep/HoaDaiNhan-removebg-preview.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 1</h4>
               <p>Card</p>
@@ -1283,7 +1278,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao-va-bong.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao-va-b.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 3</h4>
               <p>Card</p>
@@ -1294,7 +1289,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do-remw.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -1305,7 +1300,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao-va-b.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -1316,7 +1311,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao-va-bobg.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -1327,7 +1322,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do-rem.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
@@ -1368,7 +1363,6 @@
                   sau.... Dưới đây là một số điều Hương Ước Họ Nguyễn <span>CỤ NGHỊ</span> Quy định. Khi đã là con cháu
                   Họ Nguyễn <span>CỤ NGHỊ</span> thì phải nhất nhất tuân theo.
                 </div>
-
               </li>
 
               <li>
@@ -1533,7 +1527,7 @@
                   Quan trọng đột xuất</span>
               </div>
               <div class="member-img">
-                <img src="assets/images/5978391-sound.jpg" class="img-fluid" alt="">
+                <img src="assets/images/bg-preview.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1551,7 +1545,7 @@
                 <span>Thông báo hoạt động<br> Kỵ Huý Lễ - Tết</span>
               </div>
               <div class="member-img">
-                <img src="assets/images/cau-doi-don2.png" class="img-fluid" alt="">
+                <img src="assets/images/cau-doi-don2-remov.png" class="img-fluid" alt="">
               </div>
             </div>
           </div>
@@ -1563,7 +1557,7 @@
                   Công đức, xây dựng trùng tu</span>
               </div>
               <div class="member-img">
-                <img src="assets/images/cay-dang-huyen.jpg" class="img-fluid" alt="">
+                <img src="assets/images/cay-dang-huyen-remov.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1580,7 +1574,7 @@
                 <span>Thông báo hoạt động KHUYẾN HỌC vì tương lai con em chúng ta</span>
               </div>
               <div class="member-img">
-                <img src="./assets/images/hieu-hoc.jpg" class="img-fluid" alt="">
+                <img src="./assets/images/hieu-hoc-remov.png" class="img-fluid" alt="">
               </div>
             </div>
           </div>
